# X3py

./: README.md  pyproject.toml  requirements.txt
jupyter/: TestREG3D.ipynb  TestREG3D.py  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  config.json  test.py  test00.py  test_config.json  test_gui.py  test_overload.ipynb  test_parse.py  test_reg.ipynb  x3py_test00.ipynb  x3test_001.ipynb  x3test_002.ipynb  x3test_003.ipynb  x3test_004.ipynb
jupyter/.ipynb_checkpoints/: TestREG3D-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled3-checkpoint.ipynb  test_overload-checkpoint.ipynb  x3py_test00-checkpoint.ipynb  x3test_002-checkpoint.ipynb  x3test_003-checkpoint.ipynb  x3test_004-checkpoint.ipynb
src/3xpy/: 3Xpy.py  Tranform.h5
src/misc/: data_structure.py
src/x3py/: config.py  data.py  fit_methods.py  itkreg.py  reg_methods.py  seg_methods.py  utils.py  x3GUI.py  x3fit.py  x3logging.py  x3py.py  x3py_cli.py  x3reg.py  xfit.py
