[tool.poetry]
name = "x3py"
version = "0.0.1"
description = "Xanes 3D python processing tool"
authors = ["Alberto Mittone <alberto.mittone@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mittoalb/X3py"
repository = "https://github.com/mittoalb/X3py"
keywords = ["XANES", "Image Registration", "3D"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7"
#fabio = "2022.12.1"
#h5py

[tool.poetry.scripts]
rcorr = "bin.x3py-cli:main"


#[tool.setuptools.entry_points]
#console_scripts = ["x3py = bin/x3py-cli:main"]


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"


#packages = [
#    { include = "my-package" },
#    { include = "my-package/**/*.py" },
#]
