[tool.poetry]
name = "x3py"
version = "0.0.1"
description = "Xanes 3D python processing tool"
authors = ["Alberto Mittone <alberto.mittone@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mittoalb/X3py"
repository = "https://github.com/mittoalb/X3py"
keywords = ["XANES", "Image Registration", "3D"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "=3.11.2"
simpleITK = ">=2.2.1"
h5py = ">=3.8.0"
scikit-build="0.17.3"
swig="4.1.1"
opencv-python="4.7.0"
tifffile="2023.4.12"
python="3.11.2"
nvidia-ml-py3="7.352.0"
fabio="2023.4.1"


#cudatoolkit=">=11.0"
#logging = ">=0.5.1.2"
#cupy = ">=12.0.0"

#[tool.poetry.scripts]
#rcorr = "bin.x3py-cli:main"


#[tool.setuptools.entry_points]
#console_scripts = ["x3py = bin/x3py-cli:main"]


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"


#packages = [
#    { include = "my-package" },
#    { include = "my-package/**/*.py" },
#]ge
