[tool.poetry]
name = "x3py"
version = "0.0.1"
description = "Xanes 3D python processing tool"
authors = ["Alberto Mittone <alberto.mittone@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mittoalb/X3py"
repository = "https://github.com/mittoalb/X3py"
keywords = ["XANES", "Image Registration", "3D"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
#python = ">=3.11,<4.0"
simpleITK = ">=2.2.1"
h5py = ">=3.8.0"
scikit-build = ">=0.17.3"
swig = ">=4.1.1"
opencv-python = ">=4.7.0"
tifffile = ">=2023.4.12"
nvidia-ml-py3 = ">=7.352.0"
fabio = ">=2023.4.1"
matplotlib = ">=3.7.1"
jupyter = ">=1.0.0"
treelib = ">=1.6.1"
ipywidgets = ">=8.0.6"
napari = ">=0.4.17"
pyimagej = ">=1.4.1"
click = "8.1.7"

[tool.poetry.scripts]
x3py = "x3py.x3py_cli:main"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"